BuildLog.txt
Log started at 12/22/2025 18:15:23 (2025-12-22T18:15:23Z)
Resolved project argument C:\Adastrea\Adastrea.uproject to C:\Adastrea\Adastrea.uproject
No config file at C:\ProgramData\Unreal Engine\UnrealBuildTool\BuildConfiguration.xml
No config file at C:\Users\akuma\AppData\Local\Unreal Engine\UnrealBuildTool\BuildConfiguration.xml
No config file at C:\Users\akuma\OneDrive\Documents\Unreal Engine\UnrealBuildTool\BuildConfiguration.xml
Configuration will be read from:
  C:\Users\akuma\AppData\Roaming\Unreal Engine\UnrealBuildTool\BuildConfiguration.xml
Reading configuration file from cache (C:\Adastrea\Intermediate\Build\XmlConfigCache.bin): C:\Users\akuma\AppData\Roaming\Unreal Engine\UnrealBuildTool\BuildConfiguration.xml
Reading configuration file from cache (C:\Adastrea\Intermediate\Build\XmlConfigCache.bin): C:\Adastrea\Saved\UnrealBuildTool\BuildConfiguration.xml
Reading configuration file from cache (C:\Adastrea\Intermediate\Build\XmlConfigCache.bin): C:\Users\akuma\AppData\Local\UnrealEngine\Intermediate\Build\UnrealBuildTool.Env.BuildConfiguration.xml
Log file: C:\Adastrea\BuildLog.txt

Setting temp directory to 'C:\Users\akuma\AppData\Local\Temp\UnrealBuildTool\12c8af0c'
    Registering build platform: UnrealBuildTool.AndroidPlatformFactory
    Registering build platform: UnrealBuildTool.IOSPlatformFactory
    Registering build platform: UnrealBuildTool.LinuxPlatformFactory
    Registering build platform: UnrealBuildTool.MacPlatformFactory
    Registering build platform: UnrealBuildTool.TVOSPlatformFactory
    Registering build platform: UnrealBuildTool.WindowsPlatformFactory
Found Windows 10 SDK root at C:\Program Files (x86)\Windows Kits\10 (1)
Found Windows 10 SDK root at C:\Program Files (x86)\Windows Kits\10 (2)
Found Windows 10 SDK version 10.0.22621.0 at C:\Program Files (x86)\Windows Kits\10
Found Universal CRT version 10.0.22621.0 at C:\Program Files (x86)\Windows Kits\10
Found Windows 10 SDK version 10.0.26100.0 at C:\Program Files (x86)\Windows Kits\10
Found Universal CRT version 10.0.26100.0 at C:\Program Files (x86)\Windows Kits\10
Win64 Installed SDK(s): MinVersion_Sdk=10.0.19041.0, MaxVersion_Sdk=10.9.99999.0, CurrentVersion_Sdk=10.0.22621.0, Version_AutoSdk=10.0.22621.0, CurrentVersion_AutoSdk=
        Registering build platform: Win64 - buildable: True
    Registering build platform: UnrealBuildTool.VisionOSPlatformFactory
Command line: "C:\Program Files\Epic Games\UE_5.6\Engine\Binaries\DotNET\UnrealBuildTool\UnrealBuildTool.dll" Adastrea Win64 Development -Project=C:\Adastrea\Adastrea.uproject -Log=C:\Adastrea\BuildLog.txt
Using 'git status' to determine working set for adaptive non-unity build (C:\Adastrea).
Generated code is up to date.
Adastrea.exe: Produced item "C:\Adastrea\Binaries\Win64\Adastrea.exe" doesn't exist.
Adastrea.exe: Produced item "C:\Adastrea\Binaries\Win64\Adastrea.pdb" doesn't exist.
Adastrea.target: Produced item "C:\Adastrea\Binaries\Win64\Adastrea.target" doesn't exist.
CombatVFXComponent.cpp: Produced item "C:\Adastrea\Intermediate\Build\Win64\x64\UnrealGame\Development\Adastrea\CombatVFXComponent.cpp.obj" doesn't exist.
Checking for live coding mutex: Global\LiveCoding_C++Adastrea+Binaries+Win64+Adastrea.exe
Building Adastrea...
Using Visual Studio 2022 14.50.35720 toolchain (C:\Program Files\Microsoft Visual Studio\18\Community\VC\Tools\MSVC\14.50.35717) and Windows 10.0.22621.0 SDK (C:\Program Files (x86)\Windows Kits\10).
Warning: Visual Studio 2022 compiler is not a preferred version
[Adaptive Build] Excluded from Adastrea unity file: CombatVFXComponent.cpp, Spaceship.cpp
[Adaptive Build] Excluded from AdastreaDirector unity file: AdastreaDirectorBlueprintLibrary.cpp, AssetHelpers.cpp, SceneContextCapture.cpp, StandardResult.cpp, ToolExecutionGuard.cpp, UEBridge.cpp
Determining max actions to execute in parallel (8 physical cores, 8 logical cores)
  Executing up to 8 processes, one per physical core
Using Unreal Build Accelerator local executor to run 3 action(s)
  Storage capacity 40Gb
  RootDir C:\ProgramData\Epic\UnrealBuildAccelerator
---- Starting trace: 251222_181524_vs16628 ----
UbaSessionServer - Disable remote execution (remote sessions will finish current processes)
------ Building 3 action(s) started ------
[1/3] Compile [x64] CombatVFXComponent.cpp
C:\Adastrea\Source\Adastrea\Combat\CombatVFXComponent.cpp(540,4): error C2027: use of undefined type 'UDecalComponent'
			Decal->SetFadeScreenSize(0.001f);
			^
C:\Program Files\Epic Games\UE_5.6\Engine\Source\Runtime\Engine\Classes\Engine\EngineTypes.h(20,7): note: see declaration of 'UDecalComponent'
class UDecalComponent;
      ^
 Compile [x64] CombatVFXComponent.cpp: Exited with error code 2 . The build will fail.
 Compile [x64] CombatVFXComponent.cpp: WorkingDirectory C:\Program Files\Epic Games\UE_5.6\Engine\Source
 Compile [x64] CombatVFXComponent.cpp: C:\Program Files\Microsoft Visual Studio\18\Community\VC\Tools\MSVC\14.50.35717\bin\Hostx64\x64\cl.exe @"C:/Adastrea/Intermediate/Build/Win64/x64/UnrealGame/Development/Adastrea/CombatVFXComponent.cpp.obj.rsp" 
C:\Adastrea\Source\Adastrea\Combat\CombatVFXComponent.cpp(541,4): error C2027: use of undefined type 'UDecalComponent'
			Decal->SetFadeOut(ImpactEffectData->HullImpact.DecalLifetime, 1.0f, false);
			^
C:\Program Files\Epic Games\UE_5.6\Engine\Source\Runtime\Engine\Classes\Engine\EngineTypes.h(20,7): note: see declaration of 'UDecalComponent'
class UDecalComponent;
      ^
Trace written to file C:/Adastrea/BuildLog.uba with size 3.1kb
Total time in Unreal Build Accelerator local executor: 1.59 seconds
CompilationResultException: OtherCompilationError
   at UnrealBuildTool.ActionGraph.ExecuteActionsAsync(BuildConfiguration BuildConfiguration, List`1 ActionsToExecute, List`1 TargetDescriptors, ILogger Logger, IActionArtifactCache actionArtifactCache)
   at UnrealBuildTool.BuildMode.BuildAsync(TargetMakefile[] Makefiles, List`1 TargetDescriptors, BuildConfiguration BuildConfiguration, BuildOptions Options, FileReference WriteOutdatedActionsFile, ILogger Logger, String ActionTypeFilter)
   at UnrealBuildTool.BuildMode.BuildAsync(List`1 TargetDescriptors, BuildConfiguration BuildConfiguration, ISourceFileWorkingSet WorkingSet, BuildOptions Options, FileReference WriteOutdatedActionsFile, ILogger Logger, Boolean bSkipPreBuildTargets, String ActionTypeFilter)
   at UnrealBuildTool.BuildMode.ExecuteAsync(CommandLineArguments Arguments, ILogger Logger)
   at UnrealBuildTool.UnrealBuildTool.Main(String[] ArgumentsArray)
WriteFileIfChanged() wrote 0 changed files of 1 requested writes.

Timeline:
[  0.000]  +0.478 Main
   0.063          [  0.062]  +0.036 Apply XmlConfig
   0.099          [  0.099]  +0.250 <unknown>
   0.349          [  0.349]  +0.129 RegisterPlatforms
[  0.479]  +2.422 BuildMode
   0.497          [  0.018]  +0.602 Creating MakeFile for Adastrea
   1.104          [  0.624]  +0.152 Preparing ActionGraph
   1.259          [  0.780]  +1.637 Executing ActionGraph
   2.897          [  2.418]  +0.004 Saving caches
[  2.909]  +0.000 TelemetryService.FlushEvents
[  2.909]

Result: Failed (OtherCompilationError)
Total execution time: 2.91 seconds
